--- a/public/tools/restApiToText.html
+++ b/public/tools/restApiToText.html
@@ -48,7 +48,7 @@
         </div>
         <div class="alert alert-danger" id="errors" style="display: none;"></div>
     </div>
-    <script src="js/pluralize.js"></script>
+    <script src="../js/pluralize.js"></script>
     <script>
         window.onload = () => {
             const $method = document.getElementById('method')
