--- a/public/tools/apiToSpreadsheet.html
+++ b/public/tools/apiToSpreadsheet.html
@@ -54,6 +54,10 @@
         </section>
     </div>
     <script src="../js/apiToSpreadsheet.js"></script>
+    <script>
+        // Hot reload
+        // new EventSource('/esbuild').addEventListener('change', () => location.reload())
+    </script>
 </body>
 
 </html>
