api to spreadsheet first draft

--- a/public/tools/apiToSpreadsheet.old.html
+++ b/public/tools/apiToSpreadsheet.old.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../img/favicon.ico">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <link rel="shortcut icon" href="../favicon.ico">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <title>API to Spreadsheet</title>
 </head>
 
@@ -56,7 +57,7 @@
     <script src="../js/apiToSpreadsheet.js"></script>
     <script>
         // Hot reload
-        new EventSource('/esbuild').addEventListener('change', () => location.reload())
+        // new EventSource('/esbuild').addEventListener('change', () => location.reload())
     </script>
 </body>
 
