--- a/public/tools/apiToSpreadsheet.html
+++ b/public/tools/apiToSpreadsheet.html
@@ -2,63 +2,18 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../favicon.ico">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <title>API to Spreadsheet</title>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="shortcut icon" href="../img/favicon.ico">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+  <link rel="stylesheet" href="../css/style.css">
+  <title>Api to Spreadsheet</title>
 </head>
 
 <body>
-    <div class="container">
-        <section>
-            <h1>API to Spreadsheet</h1>
-            <p>Convert OpenAPI/Swagger file to flat Spreadsheet.</p>
-        </section>
-        <section>
-            <h3>1. Load API</h3>
-            <form>
-                <div class="row">
-                    <div class="col">
-                        <input type="file" id="openApiFile" />
-                    </div>
-                </div>
-            </form>
-        </section>
-        <section>
-            <h3>2. Select services</h3>
-            <form>
-                <div class="row">
-                    <div class="col">
-                        <select class="form-select" size="8" id="services">
-                        </select>
-                    </div>
-                </div>
-                <!-- <div class="row">
-                    <div class="col">
-                        <button type="button" class="btn btn-primary btn-sm" id="selectAllServices">Select all</button>
-                    </div>
-                </div> -->
-            </form>
-        </section>
-        <section>
-            <h3>3. Export</h3>
-            <form>
-                <div class="row">
-                    <div class="col">
-                        <button type="button" class="btn btn-primary btn-sm" id="download">Download</button>
-                    </div>
-                </div>
-            </form>
-        </section>
-    </div>
-    <script src="../js/apiToSpreadsheet.js"></script>
-    <script>
-        // Hot reload
-        // new EventSource('/esbuild').addEventListener('change', () => location.reload())
-    </script>
+  <script type="module" src="../js/apiToSpreadsheet.js"></script>
 </body>
 
 </html>
