--- a/public/index.html
+++ b/public/index.html
@@ -2,21 +2,18 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./img/favicon.ico">
-    <title>API Tools</title>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="shortcut icon" href="../img/favicon.ico">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+  <link rel="stylesheet" href="../css/style.css">
+  <title>Api Tools</title>
 </head>
 
 <body>
-    <div class="container">
-        <h1>API Tools</h1>
-        <ul>
-            <li><a href="tools/restApiToText.html">Rest API to text</a></li>
-            <li><a href="tools/apiToSpreadsheet.html">Api to Spreadsheet</a></li>
-        </ul>
-    </div>
+  <script type="module" src="../js/home.js"></script>
 </body>
 
 </html>
