--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,12 @@
   <link rel="shortcut icon" href="../img/favicon.ico">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="./css/style.css">
   <title>Api Tools</title>
 </head>
 
 <body>
-  <script type="module" src="../js/home.js"></script>
+  <script type="module" src="./js/home.js"></script>
 </body>
 
 </html>
