--- a/public/tools/restApiToText.html
+++ b/public/tools/restApiToText.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <script type="module" src="../js/restApitoText.js"></script>
+  <script type="module" src="../js/restApiToText.js"></script>
 </body>
 
 </html>
