swagger viewer draft

--- a/public/browser.html
+++ b/public/browser.html
@@ -9,11 +9,11 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
   <link rel="stylesheet" href="./css/style.css">
-  <title>Api Server</title>
+  <title>Api Browser</title>
 </head>
 
 <body>
-  <script type="module" src="./js/home.js"></script>
+  <script type="module" src="./js/browser.js"></script>
 </body>
 
 </html>
