--- a/public/viewer.html
+++ b/public/viewer.html
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" href="../img/favicon.ico">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+  <link rel="stylesheet" href="./css/swagger-ui.css">
   <link rel="stylesheet" href="./css/style.css">
   <title>Api Viewer</title>
 </head>
