Rename plantuml tool

--- a/public/tools/apiToPlantuml.html
+++ b/public/tools/apiToPlantuml.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <script type="module" src="../js/apiToPlantuml.js"></script>
+  <script type="module" src="../js/apiToPlantUml.js"></script>
 </body>
 
 </html>
